--- a/README
+++ b/README
@@ -189,6 +189,10 @@ Ruby-OLE:: http://code.google.com/p/ruby-ole/
 
 	   libole-ruby
 
+RMagick:: http://rmagick.rubyforge.org/
+
+	  librmagick-ruby
+
 Note that some of the Debian packages are not part of the currently
 stable Debian release (5.0, Lenny), but can be safely installed from
 the unstable repository.
